blog landing page mobile view header spacing fixes

--- a/src/styles/blog/BlogLanding.css
+++ b/src/styles/blog/BlogLanding.css
@@ -278,7 +278,7 @@
         gap:2rem;
     }
     .blog-landing-header{
-        padding: 54px 0px;
+        padding: 30px 0px;
     }
     .blog-landing-header img{
         width: max-content;
